plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

group = 'av.exam'
version = '1.0'

repositories {
    mavenCentral()
}

java {
    modularity.inferModulePath = true

    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

jar {
    manifest {
        attributes(
                'Main-Class': 'av.entrance.client.Client'
        )
    }
}

javafx {
    version = "21"
    modules = [ 'javafx.controls', 'javafx.fxml' ]
}

application {
    mainClass = 'av.entrance.client.Client'
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.0'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.0'

    implementation 'org.apache.poi:poi:5.4.0'
    implementation 'org.apache.poi:poi-ooxml:5.4.0'

    implementation 'org.openjfx:javafx-base:21.0.2:win'
    implementation 'org.openjfx:javafx-controls:21.0.2:win'
    implementation 'org.openjfx:javafx-fxml:21.0.2:win'
    implementation 'org.openjfx:javafx-graphics:21.0.2:win'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports', 'jdk.httpserver/com.sun.net.httpserver=examdesk.av',
            '--add-exports', 'java.net.http/java.net.http=examdesk.av'
    ]
}

tasks.named('jar') {
    archiveBaseName.set('ExamDesk')
    archiveVersion.set(version)
    destinationDirectory.set(file("$buildDir/libs"))
}

task copyDependencies(type: Copy) {
    from configurations.runtimeClasspath {
        exclude group: 'org.openjfx'
    }
    into "$buildDir/libs/dependencies"
}